--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,26 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .new-div{
     display: flex;
 }
 
 .square-div{
-    padding: 20px;
+    border: solid 1px black;
+    box-sizing: border-box;
 }
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    width: 700px;
+    height: 700px;
+    border: solid 1px black;
+}
+
+
